--- a/book.ini
+++ b/book.ini
@@ -1,7 +1,9 @@
 [program:book]
-directory=/home/book
+directory=/home/book/
 command=/home/book/venv/bin/gunicorn -c gunicorn.py main:app
+;stderr_logfile=/home/book/log/err.log
+;stdout_logfile=/home/book/log/out.log
 autostart=true
 autorestart=unexpected
-user=root
 stopasgroup=true
+user=root
