--- a/book.conf
+++ b/book.conf
@@ -1,10 +1,10 @@
 server {
         listen       80;
-        server_name  book.com;
-        location / {
+        server_name  book;
+        location /static/ {
             alias /home/book/static/;
         }
-        location /api/ {
+        location / {
             proxy_buffering off;
             proxy_pass http://127.0.0.1:5000/;
         }
